--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,8 +41,25 @@
   doi={10.1103/PhysRev.47.777},
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
+  pdf={https://arxiv.org/pdf/2208.12348.pdf},
   selected={true}
+}
+
+@article{SNAP22,
+abbr={arXiv'22},
+author = {Chaudhari, H. and Abascal, J. and Oprea, A. and Jagielski, M. and Tramèr, F. and Ullman, J.},
+title = {SNAP - Efficient Extraction of Private Properties with Poisoning},
+publisher = {arXiv},
+year = {2022}
+}
+# url={https://arxiv.org/abs/2208.12348}
+
+@article{SafeNet22,
+abbr={arXiv'22},
+author = {Chaudhari, H. and Oprea, A. and Jagielski, M.},
+title = {SafeNet - The Unreasonable Effectiveness of Ensembles in Private Collaborative Learning},
+publisher = {arXiv},
+# year = {2022}
 }
 
 @article{einstein1905molekularkinetischen,
