--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -59,7 +59,7 @@ abbr={arXiv'22},
 author = {Chaudhari, H. and Oprea, A. and Jagielski, M.},
 title = {SafeNet - The Unreasonable Effectiveness of Ensembles in Private Collaborative Learning},
 publisher = {arXiv}
-# year = {2022}
+year = {2022}
 }
 
 @article{einstein1905molekularkinetischen,
