--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -58,7 +58,7 @@ year = {2022}
 abbr={arXiv'22},
 author = {Chaudhari, H. and Oprea, A. and Jagielski, M.},
 title = {SafeNet - The Unreasonable Effectiveness of Ensembles in Private Collaborative Learning},
-publisher = {arXiv}
+publisher = {arXiv},
 year = {2022}
 }
 
