--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,20 +46,47 @@
 }
 
 @article{SNAP22,
-abbr={arXiv'22},
+abbr={arXiv},
 author = {Chaudhari, H. and Abascal, J. and Oprea, A. and Jagielski, M. and Tramèr, F. and Ullman, J.},
 title = {SNAP - Efficient Extraction of Private Properties with Poisoning},
 publisher = {arXiv},
-year = {2022}
+year = {2022},
+pdf={https://arxiv.org/pdf/2208.12348.pdf}
 }
 # url={https://arxiv.org/abs/2208.12348}
 
 @article{SafeNet22,
-abbr={arXiv'22},
+abbr={arXiv},
 author = {Chaudhari, H. and Oprea, A. and Jagielski, M.},
 title = {SafeNet - The Unreasonable Effectiveness of Ensembles in Private Collaborative Learning},
 publisher = {arXiv},
 year = {2022}
+}
+
+@article{Trident20,
+    abbr={NDSS},
+    author = {Chaudhari*,H. and Rachuri,R. and Suresh,A.},
+    title = {Trident - Efficient 4PC Framework for Privacy Preserving Machine Learning},
+    year = {2020},
+    pdf={https://www.ndss-symposium.org/wp-content/uploads/2020/02/23005-paper.pdf}
+}
+
+@article{FLASH20,
+    abbr={PETS},
+    author = {Byali*,M. and Chaudhari,H. and Patra,A. and Suresh,A.},
+    title = {FLASH - Fast and Robust Framework for Privacy-preserving Machine Learning},
+    publisher = {PoPETS},
+    year = {2020},
+    pdf={https://eprint.iacr.org/2019/1365.pdf}
+}
+
+@article{Astra19,
+  abbr={ACM CCSW},
+  author    = {H. Chaudhari and   A. Choudhury and A. Patra and A. Suresh},
+  title     = {{ASTRA - High-throughput 3PC over Rings with Application to Secure Prediction}},
+  booktitle   = {ACM CCSW},
+  year    = {2019},
+  pdf={https://eprint.iacr.org/2019/429.pdf}
 }
 
 @article{einstein1905molekularkinetischen,
