--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,29 +25,9 @@
   publisher={American Association of Physics Teachers,}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={https://arxiv.org/pdf/2208.12348.pdf},
-  selected={true}
-}
-
 @article{SNAP22,
 abbr={arXiv},
-author = {Chaudhari, H. and Abascal, J. and Oprea, A. and Jagielski, M. and Tramèr, F. and Ullman, J.},
+author = {Chaudhari, Harsh and Abascal, John and Oprea, Alina and Jagielski, Matthew and Tramèr, Florian and Ullman, Jonathan},
 title = {SNAP - Efficient Extraction of Private Properties with Poisoning},
 publisher = {arXiv},
 year = {2022},
@@ -57,15 +37,34 @@ pdf={https://arxiv.org/pdf/2208.12348.pdf}
 
 @article{SafeNet22,
 abbr={arXiv},
-author = {Chaudhari, H. and Oprea, A. and Jagielski, M.},
+author = {Chaudhari, Harsh and Oprea, Alina and Jagielski, Matthew},
 title = {SafeNet - The Unreasonable Effectiveness of Ensembles in Private Collaborative Learning},
 publisher = {arXiv},
-year = {2022}
+year = {2022},
+pdf={https://arxiv.org/pdf/2205.09986.pdf}
+}
+
+@article{Greewoods20,
+  abbr={NeurIPS-W},
+  author    = {Harsh Chaudhari and   Peter Rindal},
+  title     = {Greenwoods - A Practical Random Forest Framework for Privacy Preserving Training and Prediction},
+  booktitle   = {PPML},
+  year    = {2020},
+  pdf={https://ppml-workshop.github.io/ppml20/pdfs/chaudhari_et_al.pdf}
+}
+
+@article{Walmart20,
+  abbr={SIGIR},
+  author    = {Soumya Wadhwa and Saurabh Agrawal and Harsh Chaudhari and Deepthi Sharma and Kannan Achan},
+  title     = {Data Poisoning Attacks against Differentially Private Recommender Systems},
+  booktitle   = {SIGIR},
+  year    = {2020},
+  pdf={https://ppml-workshop.github.io/ppml20/pdfs/chaudhari_et_al.pdf}
 }
 
 @article{Trident20,
     abbr={NDSS},
-    author = {Chaudhari*,H. and Rachuri,R. and Suresh,A.},
+    author = {Chaudhari*,Harsh and Rachuri,Rahul and Suresh,Ajith},
     title = {Trident - Efficient 4PC Framework for Privacy Preserving Machine Learning},
     year = {2020},
     pdf={https://www.ndss-symposium.org/wp-content/uploads/2020/02/23005-paper.pdf}
@@ -73,7 +72,7 @@ year = {2022}
 
 @article{FLASH20,
     abbr={PETS},
-    author = {Byali*,M. and Chaudhari,H. and Patra,A. and Suresh,A.},
+    author = {Byali*,Megha and Chaudhari,Harsh and Patra,Arpita and Suresh,Ajith},
     title = {FLASH - Fast and Robust Framework for Privacy-preserving Machine Learning},
     publisher = {PoPETS},
     year = {2020},
@@ -81,13 +80,16 @@ year = {2022}
 }
 
 @article{Astra19,
-  abbr={ACM CCSW},
-  author    = {H. Chaudhari and   A. Choudhury and A. Patra and A. Suresh},
+  abbr={ACM CCS-W},
+  author    = {Harsh Chaudhari* and   Ashish Choudhury and Arpita Patra and Ajith Suresh},
   title     = {{ASTRA - High-throughput 3PC over Rings with Application to Secure Prediction}},
   booktitle   = {ACM CCSW},
   year    = {2019},
   pdf={https://eprint.iacr.org/2019/429.pdf}
 }
+
+
+
 
 @article{einstein1905molekularkinetischen,
   title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
