--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,12 +36,12 @@ pdf={https://arxiv.org/pdf/2208.12348.pdf}
 # url={https://arxiv.org/abs/2208.12348}
 
 @article{SafeNet22,
-abbr={arXiv},
+abbr={eprint},
 author = {Chaudhari, Harsh and Oprea, Alina and Jagielski, Matthew},
 title = {SafeNet - The Unreasonable Effectiveness of Ensembles in Private Collaborative Learning},
-publisher = {arXiv},
+publisher = {eprint},
 year = {2022},
-pdf={https://arxiv.org/pdf/2205.09986.pdf}
+pdf={https://eprint.iacr.org/2022/663.pdf}
 }
 
 @article{Greewoods20,
