--- a/assets/jupyter/blog.ipynb
+++ b/assets/jupyter/blog.ipynb
@@ -1,26 +1,66 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sample Jupyter Notebook\n",
+    "\n",
+    "This is a sample Jupyter notebook to demonstrate the integration with Jekyll."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "sys.version_info(major=3, minor=6, micro=2, releaselevel='final', serial=0)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.version_info(major=3, minor=8, micro=10, releaselevel='final', serial=0)\n"
+     ]
     }
    ],
    "source": [
     "import sys\n",
-    "sys.version_info"
+    "print(sys.version_info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Analysis Example\n",
+    "\n",
+    "Let's create a simple data visualization:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simple example with list comprehension\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "squares = [x**2 for x in numbers]\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook demonstrates how Jupyter notebooks can be embedded in Jekyll blog posts using the `jekyll-jupyter-notebook` plugin."
    ]
   }
  ],
@@ -40,9 +80,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
